// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PokeDeckContainer Should match the snap shot if there is not any types 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PokeDeckContainer
    setTypes={[MockFunction]}
    types={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          onClick={[Function]}
        >
           FAKE 
        </button>,
        <img
          src="../../../public/pikachu.gif"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": " FAKE ",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": " FAKE ",
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "src": "../../../public/pikachu.gif",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            onClick={[Function]}
          >
             FAKE 
          </button>,
          <img
            src="../../../public/pikachu.gif"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": " FAKE ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": " FAKE ",
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "src": "../../../public/pikachu.gif",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`PokeDeckContainer Should match the snapshot if the types have length 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PokeDeckContainer
    setTypes={[MockFunction]}
    types={
      Array [
        Object {
          "id": "1",
          "name": "normal",
          "pokemon": Array [
            "16",
            "17",
          ],
        },
        Object {
          "id": "2",
          "name": "fighting",
          "pokemon": Array [
            "56",
            "57",
            "66",
          ],
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          onClick={[Function]}
        >
           FAKE 
        </button>,
        Array [
          <Card
            type={
              Object {
                "id": "1",
                "name": "normal",
                "pokemon": Array [
                  "16",
                  "17",
                ],
              }
            }
          />,
          <Card
            type={
              Object {
                "id": "2",
                "name": "fighting",
                "pokemon": Array [
                  "56",
                  "57",
                  "66",
                ],
              }
            }
          />,
        ],
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": " FAKE ",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": " FAKE ",
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "type": Object {
            "id": "1",
            "name": "normal",
            "pokemon": Array [
              "16",
              "17",
            ],
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "type": Object {
            "id": "2",
            "name": "fighting",
            "pokemon": Array [
              "56",
              "57",
              "66",
            ],
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            onClick={[Function]}
          >
             FAKE 
          </button>,
          Array [
            <Card
              type={
                Object {
                  "id": "1",
                  "name": "normal",
                  "pokemon": Array [
                    "16",
                    "17",
                  ],
                }
              }
            />,
            <Card
              type={
                Object {
                  "id": "2",
                  "name": "fighting",
                  "pokemon": Array [
                    "56",
                    "57",
                    "66",
                  ],
                }
              }
            />,
          ],
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": " FAKE ",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": " FAKE ",
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "type": Object {
              "id": "1",
              "name": "normal",
              "pokemon": Array [
                "16",
                "17",
              ],
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "type": Object {
              "id": "2",
              "name": "fighting",
              "pokemon": Array [
                "56",
                "57",
                "66",
              ],
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
